deploy/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chippy
spec:
  selector:
    app: chippy
  ports:
    - name: http
      port: 8080
      targetPort: http
