deploy/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: chippy
spec:
  to:
    kind: Service
    name: chippy
  port:
    targetPort: http
  tls:
    termination: edge
